--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
+    "@vue/compiler-sfc": "^3.2.31",
     "@webpack-cli/generators": "^2.4.2",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
@@ -30,15 +31,16 @@
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "vue-loader": "15",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "workbox-webpack-plugin": "^6.5.2",
-    "@vue/compiler-sfc": "^3.2.31",
-    "vue-loader": "15",
-    "vue-template-compiler": "^2.6.14"
+    "workbox-webpack-plugin": "^6.5.2"
   },
   "dependencies": {
-    "vue": "~2.6.14"
+    "axios": "^0.26.1",
+    "vue": "~2.6.14",
+    "vuetify": "^2.6.4"
   }
 }
