--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "preval.macro": "^5.0.0",
     "vue": "~2.6.14",
     "vuetify": "^2.6.4"
   }
