--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve --node-env=development",
+    "serve:dev": "webpack serve --node-env=development --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,8 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.0",
+    "dotenv-expand": "^8.0.3",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.5.0",
     "eslint-webpack-plugin": "^3.1.1",
@@ -43,6 +46,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.28.0",
     "preval.macro": "^5.0.0",
     "vue": "~2.6.14",
